option java_package= "com.distsc.comm.msg.protobuf";
option java_outer_classname = "ClusterMessageProto";

optional string senderNodeId = 0;

enum MessageType 
{
	AppendEntries = 0;
	AappendEntriesResult=1
	RequestVote= 2;
	RequestVoteResult=3;
	NodeDiscovery=4;
	ClientMessage=5;
}
optional MessageType messageType = 1 [default = AppendEntries];

message AppendEntries
{
	optional int32 term=0;
	optional string leaderId=1;
	optional int32 prevLogIndex=2;
	optional int32 prevLogTerm=3;
	optional repeated string entries=4;
	optional bool leaderCommit=5;
}


message AppendEntriesResult
{
	optional int32 term=0;
	optional bool success=1;
}

message RequestVote
{
	optional int32 term=0;
	optional string candidateId=1;
	optional int32 lastLogIndex=2;
	optional int32 lastLogTerm=3;

}
message RequestVoteResult
{
	optional int32 term=0;
	optional bool voteGranted=1;
}


message ClientMessage
{
	required string senderUserName = 0;
	required string receiverUserName = 1;
	optional string senderMsgText = 2;
	optional string senderMsgImageName = 3;
	optional bytes 	senderMsgImageBytes = 4;
	optional string senderMsgChecksumMsgText = 5;
	optional string senderMsgChecksumImageBytes = 6;
	optional string messageTimestamp=7;
	enum ClientMessageType
	{
	 	LOGIN = 0;
	 	MESSAGE = 1;
		ACKNOWLEDGE=2;
		ERROR=3;
		LOGOUT=4;
		LOGIN_SUCCESS=5;
    }

    enum ClientMessageErrorType
    {
    	MESSAGE_CORRUPT=0;
    	DELIVERY_FAIL=1;
    	MESSAGE_SIZE=2;
    	INVALID_LOGIN=3;
    }
    optional MessageType clientMessageType = 8 [default = LOGIN];
    optional ErrorType clientMessageErrorType = 9[default = INVALID_LOGIN];

    
}

message NodeDiscovery
{

    enum NodeDiscoveryMessageType
    {
    	REQUEST_CONNECTION=0;
    	RESPONSE_CONNECTION_ACCEPTED=1;
    	RESPONSE_CONNECTION_REJECTED=2;
    	REQUEST_NODE_IP=3;
    	REQUEST_NODE_PORT=4;
    }
    

    optional NodeDiscoveryMessageType nodeDiscoveryMessageType=10 [default = REQUEST_CONNECTION];
}
    

